# C-Project-1-CE-2103

./: .gitignore  Doxyfile GUI_C!  README.md
C_IDE/: CMakeLists.txt  Translate_Code.cpp  Translate_Code.h  gui_c.cpp  gui_c.h  gui_c.ui  main.cpp
C_IDE/src/DataStructure/: SimplyLinkedLIst.cpp  SimplyLinkedLIst.h  SimplyLinkedList.h
C_IDE/src/Datatypes/: Char.cpp  Char.h  Datatype.h  Double.cpp  Double.h  Float.cpp  Float.h  Integer.cpp  Integer.h  Long.cpp  Long.h
C_IDE/src/JSON/: JSON_Prueba.cpp  JSON_Prueba.h
C_IDE/src/Socket/: Client.cpp  Client.h
C_IDE/src/TypeConversion/: Cast_to_Type.cpp  Cast_to_Type.h  Convert_Value.cpp  Convert_Value.h  ObjectToJSON.h  Process_Message.cpp  Process_Message.h  TypeMessage.cpp  TypeMessage.h
C_IDE/src/Util/: JSON_Prueba.cpp
GUI_C/: GUI_C.pro  gui_c.cpp  gui_c.h  gui_c.ui
html/: _char_8h_source.html  _client_8h_source.html  _datatype_8h_source.html  _double_8h_source.html  _float_8h_source.html  _integer_8h_source.html  _long_8h_source.html  _object_to_j_s_o_n_8h_source.html  _simply_linked_list_8h_source.html  _translate___code_8h_source.html  _type_message_8h_source.html  allocators_8h_source.html  annotated.html  biginteger_8h_source.html  class_auto_u_t_f_input_stream-members.html  class_auto_u_t_f_input_stream.html  class_auto_u_t_f_output_stream-members.html  class_auto_u_t_f_output_stream.html  class_basic_i_stream_wrapper-members.html  class_basic_i_stream_wrapper.html  class_basic_o_stream_wrapper-members.html  class_basic_o_stream_wrapper.html  class_char-members.html  class_char.html  class_char__inherit__graph.dot  class_client-members.html  class_client.html  class_crt_allocator-members.html  class_crt_allocator.html  class_cursor_stream_wrapper-members.html  class_cursor_stream_wrapper.html  class_datatype.html  (+493 more)
(+100 files in other folders)
